docs/tests/parser/types/invalid/TypeMatrixNonIntegralRow.b
fn void test() {
    let mat<x,3> m;
}
